anonymize the code

--- a/results.ipynb
+++ b/results.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/nfs/scistore19/locatgrp/rcadei/ISTAnt/venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -43,6 +34,15 @@
     "- **Hidden Layers**: 1, 2\n",
     "- **Learning Rate**: 0.05, 0.005, 0.0005\n",
     "- **Seed** = 0, 1, 2, 3, 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_dir = './results'"
    ]
   },
   {
@@ -365,7 +365,7 @@
     }
    ],
    "source": [
-    "results = pd.read_csv(\"~/ISTAnt/results/istant_hq/experiments_result.csv\", index_col=0)\n",
+    "results = pd.read_csv(f\"~{results_dir}/experiments_result.csv\", index_col=0)\n",
     "results.sort_values(by='bacc', ascending=False)"
    ]
   },
@@ -393,8 +393,7 @@
     }
    ],
    "source": [
-    "quality = \"hq\"\n",
-    "results = pd.read_csv(f\"~/ISTAnt/results/istant_{quality}/experiments_result.csv\", index_col=0)\n",
+    "results = pd.read_csv(f\"~{results_dir}/experiments_result.csv\", index_col=0)\n",
     "\n",
     "task = results.task == 'or'\n",
     "color = results.color == 'or'\n",
@@ -446,7 +445,7 @@
     "\n",
     "# save plot as pdf\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f\"results/istant_{quality}/sampling_n{n}.pdf\")\n",
+    "plt.savefig(f\"~{results_dir}/sampling_n{n}.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -515,8 +514,7 @@
     }
    ],
    "source": [
-    "quality = \"hq\"\n",
-    "results = pd.read_csv(f\"~/ISTAnt/results/istant_{quality}/experiments_result.csv\", index_col=0)\n",
+    "results = pd.read_csv(f\"~{results_dir}/experiments_result.csv\", index_col=0)\n",
     "n = 10000\n",
     "task_name = \"or\"\n",
     "color_name = \"or\"\n",
@@ -548,7 +546,7 @@
     "colorbar = fig.colorbar(cax)\n",
     "colorbar.set_label('Spearman rank-order correlation')\n",
     "# save pdf\n",
-    "plt.savefig(f\"results/istant_{quality}/evaluation_{color_name}_nolegend.pdf\", bbox_inches='tight')\n",
+    "plt.savefig(f\"~{results_dir}/evaluation_{color_name}_nolegend.pdf\", bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -577,8 +575,7 @@
     }
    ],
    "source": [
-    "quality = \"hq\"\n",
-    "results = pd.read_csv(f\"~/ISTAnt/results/istant_{quality}/experiments_result.csv\", index_col=0)\n",
+    "results = pd.read_csv(f\"~{results_dir}/experiments_result.csv\", index_col=0)\n",
     "n = 10000\n",
     "task_name = \"or\"\n",
     "color_name = \"or\"\n",
@@ -611,7 +608,7 @@
     "colorbar = fig.colorbar(cax)\n",
     "colorbar.set_label('Spearman rank-order correlation')\n",
     "# save pdf\n",
-    "plt.savefig(f\"results/istant_{quality}/evaluation_{color_name}.pdf\", bbox_inches='tight')\n",
+    "plt.savefig(f\"~{results_dir}//evaluation_{color_name}.pdf\", bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -735,9 +732,8 @@
     }
    ],
    "source": [
-    "quality = \"hq\"\n",
     "np.random.seed(4)\n",
-    "results = pd.read_csv(f\"~/ISTAnt/results/istant_{quality}/experiments_result.csv\", index_col=0)\n",
+    "results = pd.read_csv(f\"~{results_dir}/experiments_result.csv\", index_col=0)\n",
     "n = 20\n",
     "\n",
     "split = (results[\"split_criteria\"] == \"random_easy\") | (results[\"split_criteria\"] == \"experiment_easy\") | (results[\"split_criteria\"] == \"position_easy\")\n",
@@ -780,7 +776,7 @@
     "order = np.argsort(labels)\n",
     "plt.legend(np.array(handles)[order], np.array(labels)[order])\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f\"results/istant_{quality}/encoders_n{n}.pdf\")\n",
+    "plt.savefig(f\"~{results_dir}/encoders_n{n}.pdf\")\n",
     "plt.show()\n",
     "\n",
     "\n",
@@ -790,88 +786,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FID (dino, class, experiment,): 212.99783428190557\n",
-      "FID (dino, class, experiment_easy,): 235.59011592243777\n",
-      "FID (dino, class, position,): 296.83416254661086\n",
-      "FID (dino, class, position_easy,): 308.84613773003696\n",
-      "FID (dino, class, random,): 201.17703934822183\n",
-      "FID (dino, class, random_easy,): 201.1770393482221\n",
-      "FID (dino, mean, experiment,): 548.0557052415455\n",
-      "FID (dino, mean, experiment_easy,): 655.5130130583528\n",
-      "FID (dino, mean, position,): 706.1450611781449\n",
-      "FID (dino, mean, position_easy,): 746.0049384919486\n",
-      "FID (dino, mean, random,): 518.8266011437098\n",
-      "FID (dino, mean, random_easy,): 518.8266011437419\n",
-      "FID (clip_large, class, experiment,): 320.74752196449964\n",
-      "FID (clip_large, class, experiment_easy,): 352.5813433974106\n",
-      "FID (clip_large, class, position,): 494.92478374771406\n",
-      "FID (clip_large, class, position_easy,): 492.28952023903025\n",
-      "FID (clip_large, class, random,): 346.4432188168322\n",
-      "FID (clip_large, class, random_easy,): 346.44321881675825\n",
-      "FID (clip_large, mean, experiment,): 528.9008626476019\n",
-      "FID (clip_large, mean, experiment_easy,): 642.6704918144181\n",
-      "FID (clip_large, mean, position,): 696.3074599413665\n",
-      "FID (clip_large, mean, position_easy,): 737.5557891246389\n",
-      "FID (clip_large, mean, random,): 498.80385564116466\n",
-      "FID (clip_large, mean, random_easy,): 498.8038556411637\n",
-      "FID (clip, class, experiment,): 237.20853305881803\n",
-      "FID (clip, class, experiment_easy,): 250.17664135443738\n",
-      "FID (clip, class, position,): 446.4828820602297\n",
-      "FID (clip, class, position_easy,): 367.56981318253133\n",
-      "FID (clip, class, random,): 231.1175498935372\n",
-      "FID (clip, class, random_easy,): 231.11754989355137\n",
-      "FID (clip, mean, experiment,): 390.683508491771\n",
-      "FID (clip, mean, experiment_easy,): 489.06547660448507\n",
-      "FID (clip, mean, position,): 571.3867650568613\n",
-      "FID (clip, mean, position_easy,): 561.8007558407767\n",
-      "FID (clip, mean, random,): 428.1480419134908\n",
-      "FID (clip, mean, random_easy,): 428.1480419134708\n",
-      "FID (mae, class, experiment,): 197.97184149156817\n",
-      "FID (mae, class, experiment_easy,): 220.7875100941805\n",
-      "FID (mae, class, position,): 791.3574158223674\n",
-      "FID (mae, class, position_easy,): 908.5191546253452\n",
-      "FID (mae, class, random,): 293.1935012435072\n",
-      "FID (mae, class, random_easy,): 293.1935012435008\n",
-      "FID (mae, mean, experiment,): 197.9140436094326\n",
-      "FID (mae, mean, experiment_easy,): 230.7232491906509\n",
-      "FID (mae, mean, position,): 615.3026975149713\n",
-      "FID (mae, mean, position_easy,): 728.5106641658542\n",
-      "FID (mae, mean, random,): 256.9852065005921\n",
-      "FID (mae, mean, random_easy,): 256.9852065005719\n",
-      "FID (vit, class, experiment,): 244.40048650531796\n",
-      "FID (vit, class, experiment_easy,): 257.1975172181847\n",
-      "FID (vit, class, position,): 317.78214896518494\n",
-      "FID (vit, class, position_easy,): 361.13126249400096\n",
-      "FID (vit, class, random,): 248.31200183937997\n",
-      "FID (vit, class, random_easy,): 248.3120018394119\n",
-      "FID (vit, mean, experiment,): 343.4180636997376\n",
-      "FID (vit, mean, experiment_easy,): 384.80233017679814\n",
-      "FID (vit, mean, position,): 470.32816190608594\n",
-      "FID (vit, mean, position_easy,): 546.7192163306925\n",
-      "FID (vit, mean, random,): 369.23688957726483\n",
-      "FID (vit, mean, random_easy,): 369.23688957717224\n",
-      "FID (vit_large, class, experiment,): 455.86823960094074\n",
-      "FID (vit_large, class, experiment_easy,): 420.04130435197845\n",
-      "FID (vit_large, class, position,): 850.8952276732434\n",
-      "FID (vit_large, class, position_easy,): 783.6716956373001\n",
-      "FID (vit_large, class, random,): 527.4655654179351\n",
-      "FID (vit_large, class, random_easy,): 527.4655654178907\n",
-      "FID (vit_large, mean, experiment,): 475.07202107834763\n",
-      "FID (vit_large, mean, experiment_easy,): 662.7583596189297\n",
-      "FID (vit_large, mean, position,): 555.2795712006873\n",
-      "FID (vit_large, mean, position_easy,): 537.3377640278999\n",
-      "FID (vit_large, mean, random,): 471.9960660218403\n",
-      "FID (vit_large, mean, random_easy,): 471.9960660218351\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "encoders = [\"dino\", \"clip_large\", \"clip\", \"mae\", \"vit\", \"vit_large\"]\n",
     "splits = [\"experiment\", \"experiment_easy\", \"position\", \"position_easy\", \"random\", \"random_easy\"]\n",
@@ -889,8 +806,8 @@
     "                        #batch_size = 256,\n",
     "                        #num_proc = 4,\n",
     "                        #verbose = True,\n",
-    "                        data_dir = 'data/istant_hq',\n",
-    "                        results_dir = 'results/istant_hq')\n",
+    "                        data_dir = 'data/...',\n",
+    "                        results_dir = 'results/...')\n",
     "            embeddings = np.array(dataset.supervised[\"X\"])\n",
     "            # normalize embeddings\n",
     "            embeddings = (embeddings - embeddings.mean(axis=0)) / embeddings.std(axis=0)\n",
@@ -899,7 +816,7 @@
     "            fid = calculate_fid(A, B)\n",
     "            print(f\"FID ({encoder}, {token}, {split},): {fid}\")\n",
     "            results = results.append({\"encoder\": encoder, \"token\": token,  \"split\": split, \"fid\": fid}, ignore_index=True)\n",
-    "results.to_csv(\"results/istant_hq/fid.csv\")"
+    "results.to_csv(f\"~{results_dir}/fid.csv\")"
    ]
   },
   {
@@ -990,7 +907,7 @@
    ],
    "source": [
     "# load results\n",
-    "results = pd.read_csv(\"results/istant_hq/fid.csv\", index_col=0)\n",
+    "results = pd.read_csv(f\"~{results_dir}/fid.csv\", index_col=0)\n",
     "split_name = \"position\"\n",
     "results[(results[\"split\"]==split_name) | (results[\"split\"]==f\"{split_name}_easy\")].groupby(\"encoder\").agg([\"mean\", \"std\"])[\"fid\"]"
    ]
@@ -1031,8 +948,7 @@
     }
    ],
    "source": [
-    "quality = \"hq\"\n",
-    "results = pd.read_csv(f\"~/ISTAnt/results/istant_{quality}/experiments_result.csv\", index_col=0)\n",
+    "results = pd.read_csv(f\"~{results_dir}/experiments_result.csv\", index_col=0)\n",
     "n = 100000\n",
     "\n",
     "split = (results[\"split_criteria\"] == \"random_easy\") | (results[\"split_criteria\"] == \"experiment_easy\") | (results[\"split_criteria\"] == \"position_easy\")\n",
@@ -1055,7 +971,6 @@
     "k = 2\n",
     "# boxplots TEB and TEB_b\n",
     "fig, axs = plt.subplots(1, 2, figsize=(15, 5))\n",
-    "#fig.suptitle(f\"TEB and TEB_b (ISTAnt {quality})\")\n",
     "axs[0].boxplot(abs(results['TEB']/results['EAD']), labels=[\"TERB\"])\n",
     "axs[0].set_title(\"TERB\")\n",
     "axs[0].axhline(y=0, color='black', linestyle='--')\n",
